KubernetesApp/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: app
  labels:
    name: app-deploy
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: app
      type: netaapi
  template:
    metadata:
      name: app-pod
      namespace: app
      labels:
        name: app
        type: netaapi
    spec:
      containers:
      - name: app-api
        image: alan1506/net-sql-alan:v1.0
        ports:
          - containerPort: 5000
