KubernetesApp/app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    name: app
    type: netaapi
spec:
  containers:
  - name: app-api
    image: alan1506/net-sql-alan:v1.0
    ports:
      - containerPort: 5000
