KubernetesApp/sqlserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: app
  labels:
   name: mssql-service
   app: app
spec:
  type: ClusterIP
  selector:
    pod: app
    name: mssql-pod
  ports:
  - port: 1433
    targetPort: 1433
