KubernetesApp/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - host: app.35.202.137.75.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port: 
              number: 80
